<resources>
    <string name="app_name">PUB</string>
    <string name="cancel_dialog">Отмена</string>
    <string name="name_budget">Название</string>
    <string name="money_budget">Начальный баланс</string>
    <string name="description_name">Введите название счета. Это может быть покупка машины, ремонт, отпуск и т.д.</string>
    <string name="description_money">Задайте начальный баланс</string>
    <string name="save_button">Сохранить</string>
    <string name="error_name">Введите,пожалуйста,имя</string>
    <string name="starting_balance">Начальный баланс: </string>
    <string name="add_income_title">Добавление статьи бюджета</string>
    <string name="type">Введите название</string>
    <string name="money">Введите стоимость</string>
    <string name="add_from_camera">Сделать фото</string>
    <string name="add_from_gallery">Добавить из галереи</string>
    <string name="delete_item_list">Удалить</string>
    <string name="edit_item_list">Изменить</string>
    <string name="add_menu">Добавить</string>
    <string name="income">Доход</string>
    <string name="consume">Расход</string>
    <string name="clean">Стерать</string>
    <string name="ruble">₽</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="sum">+</string>
    <string name="diff">-</string>
    <string name="multi">*</string>
    <string name="div">/</string>
    <string name="title">Название</string>
    <string name="rub">RUB</string>
    <string name="showMinusPlus">Показывает минус или плюс</string>
    <string name="note">Заметка</string>
    <string name="description">Описание</string>
    <string name="category">Категория</string>
    <string name="add_new_location">Добавить геопозицию</string>
    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="place">Место</string>
    <string name="photo">Фото</string>
    <string name="hours">00:00</string>
    <string name="days">Сегодня</string>
    <string name="add_photo">Прикрепить фотографию</string>
    <string name="add_description">Добавить описание</string>
    <string name="invalid_lat_long_used">Ошибка данных</string>
    <string name="service_not_available">Сервис не отвечает</string>
    <string name="no_address_found">Адрес не найден</string>
    <string name="address_found">Адрес найден</string>
    <string name="summ_is">Сумма </string>
    <string name="achieve_to">Достичь к </string>
    <string name="collected">Собрано</string>
    <string name="replenish">Пополнить</string>
    <string name="additional_replenish">Дополнительный взнос</string>
    <string name="add_budget">Добавить бюджет</string>
    <string name="add_goal">Добавить цель</string>
    <string name="my_budgets">Мои бюджеты</string>
    <string name="my_goals">Мои цели</string>
    <string name="pub">Plan your budget</string>
    <string name="empty_list">Список пуст</string>
    <string name="gps_settings">Похоже, у Вас отключен GPS, необходимо включить его, чтобы использовать геопозицию в приложении.</string>
</resources>
