<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/base"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolBar"
            app:titleTextColor="@color/text"
            app:navigationIcon="@drawable/cancel_icon">
        </android.support.v7.widget.Toolbar>

        <Button
            android:id="@+id/income_button"
            android:layout_width="205dp"
            android:layout_height="40dp"
            android:layout_below="@+id/toolbar"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="206dp"
            android:background="@color/background"
            android:text="@string/income"
            android:textSize="15sp"
            android:textColor="@color/text"
            style="@android:style/Widget.Material.Button.Borderless"/>

        <Button
            android:id="@+id/consume_button"
            android:layout_width="205dp"
            android:layout_height="40dp"
            android:layout_below="@+id/toolbar"
            android:layout_alignParentEnd="true"
            android:background="@color/background"
            android:text="@string/consume"
            android:textSize="15sp"
            android:textColor="@color/text"
            style="@android:style/Widget.Material.Button.Borderless"/>

        <Button
            android:id="@+id/button_dot"
            android:layout_width="110dp"
            android:layout_height="85dp"
            android:text="@string/dot"
            android:textSize="25sp"
            android:textColor="@color/text2"
            android:padding="0dp"
            android:background="@color/text"
            android:layout_alignParentBottom="true"
            style="@android:style/Widget.Material.Button.Borderless" />

        <Button
            android:id="@+id/button_zero"
            android:layout_width="110dp"
            android:layout_height="85dp"
            android:text="@string/zero"
            android:textSize="25sp"
            android:textColor="@color/text2"
            android:padding="0dp"
            android:background="@color/text"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/button_dot"
            style="@android:style/Widget.Material.Button.Borderless" />

        <ImageButton
            android:id="@+id/button_clean"
            android:layout_width="110dp"
            android:layout_height="85dp"
            android:background="@color/text"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/button_zero"
            android:src="@drawable/delete_icon"
            android:padding="0dp"
            android:contentDescription="@string/clean"
            style="@android:style/Widget.Material.Button.Borderless"/>

        <Button
            android:id="@+id/button_seven"
            android:layout_width="110dp"
            android:layout_height="85dp"
            android:text="@string/seven"
            android:textSize="25sp"
            android:textColor="@color/text2"
            android:padding="0dp"
            android:background="@color/text"
            android:layout_above="@+id/button_dot"
            style="@android:style/Widget.Material.Button.Borderless" />

        <Button
            android:id="@+id/button_eight"
            android:layout_width="110dp"
            android:layout_height="85dp"
            android:text="@string/eight"
            android:textSize="25sp"
            android:textColor="@color/text2"
            android:padding="0dp"
            android:background="@color/text"
            android:layout_toEndOf="@+id/button_seven"
            android:layout_above="@+id/button_zero"
            style="@android:style/Widget.Material.Button.Borderless" />

        <Button
            android:id="@+id/button_nine"
            android:layout_width="110dp"
            android:layout_height="85dp"
            android:text="@string/nine"
            android:textSize="25sp"
            android:textColor="@color/text2"
            android:padding="0dp"
            android:background="@color/text"
            android:layout_toEndOf="@+id/button_eight"
            android:layout_above="@+id/button_clean"
            style="@android:style/Widget.Material.Button.Borderless" />

        <Button
            android:id="@+id/button_four"
            style="@android:style/Widget.Material.Button.Borderless"
            android:layout_width="110dp"
            android:layout_height="85dp"
            android:layout_above="@+id/button_seven"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:background="@color/text"
            android:padding="0dp"
            android:text="@string/four"
            android:textColor="@color/text2"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button_five"
            android:layout_width="110dp"
            android:layout_height="85dp"
            android:text="@string/five"
            android:textSize="25sp"
            android:textColor="@color/text2"
            android:padding="0dp"
            android:background="@color/text"
            android:layout_toEndOf="@+id/button_four"
            android:layout_above="@+id/button_eight"
            style="@android:style/Widget.Material.Button.Borderless" />

        <Button
            android:id="@+id/button_six"
            android:layout_width="110dp"
            android:layout_height="85dp"
            android:text="@string/six"
            android:textSize="25sp"
            android:textColor="@color/text2"
            android:padding="0dp"
            android:background="@color/text"
            android:layout_toEndOf="@+id/button_five"
            android:layout_above="@+id/button_nine"
            style="@android:style/Widget.Material.Button.Borderless" />

        <Button
            android:id="@+id/button_one"
            android:layout_width="110dp"
            android:layout_height="85dp"
            android:text="@string/one"
            android:textSize="25sp"
            android:textColor="@color/text2"
            android:padding="0dp"
            android:background="@color/text"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/button_four"
            style="@android:style/Widget.Material.Button.Borderless" />

        <Button
            android:id="@+id/button_two"
            android:layout_width="110dp"
            android:layout_height="85dp"
            android:text="@string/two"
            android:textSize="25sp"
            android:textColor="@color/text2"
            android:padding="0dp"
            android:background="@color/text"
            android:layout_toEndOf="@+id/button_one"
            android:layout_above="@+id/button_five"
            style="@android:style/Widget.Material.Button.Borderless" />

        <Button
            android:id="@+id/button_three"
            android:layout_width="110dp"
            android:layout_height="85dp"
            android:text="@string/three"
            android:textSize="25sp"
            android:textColor="@color/text2"
            android:padding="0dp"
            android:background="@color/text"
            android:layout_toEndOf="@+id/button_two"
            android:layout_above="@+id/button_six"
            style="@android:style/Widget.Material.Button.Borderless" />

        <Button
            android:id="@+id/button_equal"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:text="@string/equal"
            android:textSize="20sp"
            android:padding="0dp"
            android:layout_below="@+id/button_add"
            android:layout_toEndOf="@+id/button_clean"
            style="@android:style/Widget.Material.Button.Borderless"
            android:background="@color/buttons"/>

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:text="@string/sum"
            android:textSize="20sp"
            android:padding="0dp"
            android:layout_toEndOf="@+id/button_nine"
            android:layout_below="@+id/button_substraction"
            style="@android:style/Widget.Material.Button.Borderless"
            android:background="@color/buttons"/>

        <Button
            android:id="@+id/button_substraction"
            style="@android:style/Widget.Material.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_below="@+id/button_multi"
            android:layout_toEndOf="@+id/button_nine"
            android:background="@color/buttons"
            android:padding="0dp"
            android:text="@string/diff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_multi"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:text="@string/multi"
            android:textSize="20sp"
            android:padding="0dp"
            android:layout_toEndOf="@+id/button_six"
            android:layout_below="@+id/button_division"
            style="@android:style/Widget.Material.Button.Borderless"
            android:background="@color/buttons"/>

        <Button
            android:id="@+id/button_division"
            style="@android:style/Widget.Material.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_alignTop="@+id/button_three"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:layout_toEndOf="@+id/button_three"
            android:background="@color/buttons"
            android:padding="0dp"
            android:text="@string/div"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_type"
            style="@android:style/Widget.Material.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button_one"
            android:layout_alignParentEnd="true"
            android:background="@color/background"
            android:text="@string/add_description"
            android:textColor="@color/text"/>


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/income_button"
            android:layout_above="@+id/button_type">

            <TextView
                android:id="@+id/autofit"
                android:layout_width="191dp"
                android:layout_height="94dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="128dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="end"
                android:text="@string/zero"
                android:maxLines="1"
                android:textSize="80sp"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="40sp"
                app:autoSizeMaxTextSize="80sp"
                app:autoSizeStepGranularity="3sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.434" />

            <TextView
                android:id="@+id/currency_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="155dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="179dp"
                android:text="@string/rub"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/plus_minus"
                android:layout_width="76dp"
                android:layout_height="111dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="68dp"
                android:layout_marginBottom="69dp"
                android:src="@drawable/plus_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.433"
                android:contentDescription="@string/showMinusPlus" />

            <TextView
                android:id="@+id/result_text_too"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="300dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="116dp"
                android:layout_marginBottom="20dp"
                android:text=""
                android:textColor="@color/text2"
                android:textSize="50sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/currency_text" />

        </android.support.constraint.ConstraintLayout>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>